--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/sequence-js-.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/sequence-js-.yaml
@@ -15,3 +15,9 @@ DisplayValueStepTool:
   is: RibbonTool
   parent: SequenceGroup_InputOutput
   delegate: DisplayValueStep
+
+
+InvokeSequenceStepTool:
+  is: RibbonTool
+  parent: SequenceGroup_InputOutput
+  delegate: InvokeSequenceStep
