sequence crud, sequence step show value

--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/sequence/sequence-steps.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/sequence/sequence-steps.yaml
@@ -23,6 +23,7 @@ DisplayValueStep:
     text:
       is: ObjectLocation
       by: Nominal
+      editor: SelectSequenceStepEditor
     selfLocation: SelfLocation
 
 
