single stepping works

--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/sequence/sequence-steps.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/sequence/sequence-steps.yaml
@@ -32,8 +32,8 @@ InvokeSequenceStep:
   abstract: true
   is: SequenceStep
   class: tech.kzen.auto.server.objects.sequence.step.InvokeSequenceStep
-  icon: ToggleOn
-  title: "Invoke Sequence"
+  icon: TransitEnterexit
+  title: "Run"
   sequence: ""
   meta:
     sequence:
