RunStep pause works

--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/sequence-js.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/sequence-js.yaml
@@ -96,10 +96,10 @@ WaitStepTool:
   delegate: WaitStep
 
 
-InvokeSequenceStepTool:
+RunTool:
   is: RibbonTool
   parent: SequenceGroup_LogicControl
-  delegate: InvokeSequenceStep
+  delegate: RunStep
 
 
 ################################################################
