--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/sequence/sequence-steps.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/sequence/sequence-steps.yaml
@@ -57,7 +57,7 @@ RunStep:
     instructions:
       is: ObjectLocation
       by: Nominal
-      editor: SelectScriptEditor
+      editor: SelectLogicEditor
 #      call: true
 
 
