--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/sequence-js.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/sequence-js.yaml
@@ -66,6 +66,8 @@ IfStepDisplay:
   is: SequenceStepDisplay
   class: tech.kzen.auto.client.objects.document.sequence.step.display.condition.IfStepDisplay$Wrapper
   attributeEditorManager: AttributeEditorManager
+  stepDisplayManager: StepDisplayManagerHandle
+  sequenceCommander: SequenceCommander
 
 #IfStepCommander:
 #  is: SequenceStepCommander
