--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/sequence-js.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/sequence-js.yaml
@@ -166,6 +166,12 @@ DivisibleCheckStepTool:
   parent: SequenceGroup_LogicControl
   delegate: DivisibleCheckStep
 
+
+LogicalAndStepTool:
+  is: RibbonTool
+  parent: SequenceGroup_LogicControl
+  delegate: LogicalAndStep
+
 ################################################################
 
 SequenceGroup_Browser:
