--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/sequence/sequence-steps.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/sequence/sequence-steps.yaml
@@ -68,7 +68,7 @@ DivisibleCheckStep:
     selfLocation: SelfLocation
 
 
-LogicalAndStepStep:
+LogicalAndStep:
   abstract: true
   is: SequenceStep
   class: tech.kzen.auto.server.objects.sequence.step.logic.LogicalAndStep
