--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/sequence/sequence-steps.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/sequence/sequence-steps.yaml
@@ -150,6 +150,7 @@ RunStep:
       is: ObjectLocation
       by: Nominal
       editor: SelectSequenceStepEditor
+      nullable: true
     selfLocation: SelfLocation
 
 
