ad-hoc script argument progress

--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/sequence-js.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/sequence-js.yaml
@@ -117,6 +117,10 @@ SelectLogicEditor:
   class: tech.kzen.auto.client.objects.document.sequence.display.edit.SelectLogicEditor$Wrapper
 
 
+RunStepArgumentsEditor:
+  is: AttributeEditor
+  class: tech.kzen.auto.client.objects.document.sequence.step.control.RunStepArgumentsEditor$Wrapper
+
 
 #######################################################################################################################
 
