--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/sequence-js.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/sequence-js.yaml
@@ -122,6 +122,11 @@ RunStepArgumentsEditor:
   class: tech.kzen.auto.client.objects.document.sequence.step.control.RunStepArgumentsEditor$Wrapper
 
 
+TargetSpecEditor:
+  is: AttributeEditor
+  class: tech.kzen.auto.client.objects.document.sequence.display.edit.TargetSpecEditor$Wrapper
+
+
 #######################################################################################################################
 
 SequenceGroup_InputOutput:
