--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/sequence-js.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/sequence-js.yaml
@@ -151,6 +151,12 @@ TextLiteralStepTool:
   delegate: TextLiteralStep
 
 
+FormulaStepTool:
+  is: RibbonTool
+  parent: SequenceGroup_InputOutput
+  delegate: FormulaStep
+
+
 NumberLiteralStepTool:
   is: RibbonTool
   parent: SequenceGroup_InputOutput
