step validation progress, added SequenceValidationState, SequenceValidator works

--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/sequence/sequence-jvm.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/sequence/sequence-jvm.yaml
@@ -1,4 +1,10 @@
 
+
+# NB: referenced in FeatureDocument
+SequenceValidator:
+  class: tech.kzen.auto.server.objects.sequence.SequenceValidator
+
+
 #######################################################################################################################
 
 ArgumentStep:
