--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/sequence/sequence-jvm.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/sequence/sequence-jvm.yaml
@@ -51,7 +51,9 @@ FormulaStep:
   title: "Formula"
   code: ""
   meta:
-    code: String
+    code:
+      is: String
+      multiline: true
     selfLocation: SelfLocation
 
 
