--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/sequence/sequence-jvm.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/sequence/sequence-jvm.yaml
@@ -160,7 +160,7 @@ RunStep:
   icon: PlayArrow
   title: "Run"
   instructions: ""
-  argument: ""
+  arguments: {}
   meta:
     instructions:
       is: ObjectLocation
